--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
-    "dev:start": "npm-run-all build start",
+    "dev:start": "npm-run-all build start:debug",
     "dev": "nodemon --watch src -e ts --exec npm run dev:start",
-    "start": "node --inspect ."
+    "start:debug": "node --inspect .",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
